# playground

./: .gitignore  Cargo.toml  README.md  bench.sh  complete_results.csv  extract_proving_times.py  extract_times.py  performance_comparison.md  summary_table.py
bench-p3-fib-zkvm-proof-gen/: Cargo.toml
bench-p3-fib-zkvm-proof-gen/examples/: demo.rs
bench-p3-fib-zkvm-proof-gen/src/: lib.rs  plonky3.rs  trace.rs
bench-p3-monty-proof-gen/: Cargo.toml
bench-p3-monty-proof-gen/src/: lib.rs  main.rs
bench-p3-proof-gen/: Cargo.toml
bench-p3-proof-gen/src/: lib.rs  main.rs
bench-wf-proof-gen/: Cargo.toml
bench-wf-proof-gen/src/: lib.rs
goldilocks-monty/: Cargo.toml
goldilocks-monty/benches/: bench_field.rs  extension.rs  poseidon_comparison.rs
goldilocks-monty/src/: extension.rs  goldilocks.rs  mds.rs  poseidon2.rs
goldilocks-monty/src/x86_64_avx2/: packing.rs
goldilocks-monty/src/x86_64_avx512/: packing.rs
micro-bench/: Cargo.toml  bench.html
micro-bench/src/: lib.rs  main.rs  p3_benchmarks.rs  wf_benchmarks.rs
monty-64/: Cargo.toml
monty-64/src/: monty_64.rs
p3/: Cargo.toml
p3-fib/src/: miden.rs  tests.rs  types.rs
p3-monty/: Cargo.toml
p3-monty/src/: lib.rs  main.rs
p3/src/: lib.rs  main.rs
trace-convertor/: Cargo.toml
trace-convertor/examples/: miden_to_plonky3.rs  simple_miden_proof.rs
trace-convertor/src/: lib.rs
wasm-p3-proof-gen/: Cargo.toml  index.html
wasm-p3-proof-gen/src/: air.rs  lib.rs  proof.rs  tests.rs  types.rs  wasm_api.rs
wf/: Cargo.toml
wf/src/: lib.rs  main.rs
