[workspace]
members = [
    "p3", 
    "wf",
    # "p3-monty"
]

[workspace.dependencies]
ark-std = { version = "0.5.0", features = [ "print-trace" ] }
# ark-std = "0.5.0"
rand = { version = "0.9", features = ["small_rng"] }


# winterfell dependencies - using crates.io versions
winterfell = { version = "0.13.0", default-features = false, features = ["std", "concurrent"] }
core-utils = { version = "0.13", package = "winter-utils", default-features = false, features = ["std"] }
tracing = { version = "0.1", default-features = false, features = ["std"] }

# Plonky3 dependencies - using crates.io versions with parallel features where available
p3-air = "0.3.0"
p3-goldilocks = "0.3.0"
p3-challenger = "0.3.0"
p3-commit = "0.3.0"
p3-dft = { version = "0.3.0", features = ["parallel"] }
p3-field = "0.3.0"
p3-fri = "0.3.0"
p3-interpolation = "0.3.0"
p3-keccak = "0.3.0"
p3-matrix = "0.3.0"
p3-merkle-tree = "0.3.0"
p3-poseidon2 = "0.3.0"
p3-blake3 = "0.3.0"
p3-symmetric = "0.3.0"
p3-uni-stark = { version = "0.3.0", features = ["parallel"] }
p3-util = { version = "0.3.0", features = ["parallel"] }

# local patches that is more verbose 
[patch.crates-io]
winterfell = { path = "../winterfell/winterfell" }
winter-utils = { path = "../winterfell/utils/core" }

# Plonky3 local patches with parallel features where available
p3-air = { path = "../Plonky3/air" }
p3-goldilocks = { path = "../Plonky3/goldilocks" }
p3-challenger = { path = "../Plonky3/challenger" }
p3-commit = { path = "../Plonky3/commit" }
p3-dft = { path = "../Plonky3/dft", features = ["parallel"] }
p3-field = { path = "../Plonky3/field" }
p3-fri = { path = "../Plonky3/fri" }
p3-interpolation = { path = "../Plonky3/interpolation" }
p3-keccak = { path = "../Plonky3/keccak" }
p3-matrix = { path = "../Plonky3/matrix" }
p3-merkle-tree = { path = "../Plonky3/merkle-tree" }
p3-poseidon2 = { path = "../Plonky3/poseidon2" }
p3-blake3 = { path = "../Plonky3/blake3" }
p3-symmetric = { path = "../Plonky3/symmetric" }
p3-uni-stark = { path = "../Plonky3/uni-stark", features = ["parallel"] }
p3-util = { path = "../Plonky3/util", features = ["parallel"] }
