[workspace]
members = [
    "p3", 
    "wf",
    "monty-64",
    "p3-monty",
    "goldilocks-monty",
    "p3-fib",
    "trace-convertor",
    "micro-bench",
]

[workspace.dependencies]
rayon = "1.8"
tracing-attributes = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
atty = "0.2"

ark-std = { version = "0.5.0", default-features = false, features = [ "print-trace" ] }
rand = { version = "0.9.0", default-features = false, features = ["small_rng"] }
criterion = "0.6"
num-bigint = { version = "0.4.3", default-features = false }
paste = "1.0.15"

# winterfell dependencies - using crates.io versions
winterfell = { version = "0.13.0", default-features = false }
winter-prover = { version = "0.13", default-features = false  }
core-utils = { version = "0.13", package = "winter-utils", default-features = false }
tracing = { version = "0.1", default-features = false }
serde = { version = "1.0", default-features = false }

# miden-vm dependencies
miden-core = { version = "0.18", default-features = false }
miden-vm = { version = "0.18", default-features = false }
miden-processor = { version = "0.18", default-features = false }
miden-assembly = { version = "0.18", default-features = false }
miden-prover = { version = "0.18", default-features = false }
miden-verifier = { version = "0.18", default-features = false }
miden-crypto = { version = "0.17", default-features = false}

# Plonky3 dependencies - using crates.io versions with parallel features where available
p3-air = "0.3.0"
p3-goldilocks = "0.3.0"
p3-challenger = "0.3.0"
p3-commit = "0.3.0"
p3-mds = "0.3.0"
p3-field-testing = "0.3.0"
p3-dft = { version = "0.3.0", features = ["parallel"] }
p3-field = "0.3.0"
p3-fri = "0.3.0"
p3-interpolation = "0.3.0"
p3-keccak = "0.3.0"
p3-matrix = "0.3.0"
p3-merkle-tree = "0.3.0"
p3-poseidon2 = "0.3.0"
p3-blake3 = "0.3.0"
p3-symmetric = "0.3.0"
p3-uni-stark = { version = "0.3.0", features = ["parallel"] }
p3-util = { version = "0.3.0", features = ["parallel"] }

# # local patches that is more verbose 
# [patch.crates-io]
# winterfell = { path = "../winterfell/winterfell" }
# winter-utils = { path = "../winterfell/utils/core" }

# # Plonky3 local patches with parallel features where available
# p3-air = { path = "../Plonky3/air" }
# p3-goldilocks = { path = "../Plonky3/goldilocks" }
# p3-challenger = { path = "../Plonky3/challenger" }
# p3-commit = { path = "../Plonky3/commit" }
# p3-dft = { path = "../Plonky3/dft", features = ["parallel"] }
# p3-field = { path = "../Plonky3/field" }
# p3-fri = { path = "../Plonky3/fri" }
# p3-interpolation = { path = "../Plonky3/interpolation" }
# p3-keccak = { path = "../Plonky3/keccak" }
# p3-matrix = { path = "../Plonky3/matrix" }
# p3-merkle-tree = { path = "../Plonky3/merkle-tree" }
# p3-poseidon2 = { path = "../Plonky3/poseidon2" }
# p3-blake3 = { path = "../Plonky3/blake3" }
# p3-symmetric = { path = "../Plonky3/symmetric" }
# p3-uni-stark = { path = "../Plonky3/uni-stark", features = ["parallel"] }
# p3-util = { path = "../Plonky3/util", features = ["parallel"] }
