[workspace]
members = [
    # p3 components for goldilocks monty
    "monty-64",
    "goldilocks-monty",
    # p3 components for trace convertor
    "trace-convertor",

    # micro-bench for individual components
    "micro-bench",

    # bench e2e proof generation
    "bench-p3-proof-gen", 
    "bench-wf-proof-gen",
    "bench-p3-monty-proof-gen",

    # bench e2e zkVM proof generation
    "bench-p3-fib-zkvm-proof-gen",

]

[workspace.dependencies]
rayon = "1.8"
tracing-attributes = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
atty = "0.2"

ark-std = { version = "0.5.0", default-features = false, features = [ "print-trace" ] }
rand = { version = "0.9.0", default-features = false, features = ["small_rng"] }
criterion = "0.6"
num-bigint = { version = "0.4.3", default-features = false }
paste = "1.0.15"

# winterfell dependencies - using crates.io versions
winterfell = { version = "0.13.0", default-features = false }
winter-prover = { version = "0.13", default-features = false  }
core-utils = { version = "0.13", package = "winter-utils", default-features = false }
tracing = { version = "0.1", default-features = false }
serde = { version = "1.0", default-features = false }

# miden-vm dependencies
miden-core = { version = "0.18", default-features = false }
miden-vm = { version = "0.18", default-features = false }
miden-processor = { version = "0.18", default-features = false }
miden-assembly = { version = "0.18", default-features = false }
miden-prover = { version = "0.18", default-features = false }
miden-verifier = { version = "0.18", default-features = false }
miden-crypto = { version = "0.17", default-features = false}

# Plonky3 dependencies - using crates.io versions with parallel features where available
p3-air = "0.3.0"
p3-goldilocks = "0.3.0"
p3-challenger = "0.3.0"
p3-commit = "0.3.0"
p3-mds = "0.3.0"
p3-field-testing = "0.3.0"
p3-dft = { version = "0.3.0", features = ["parallel"] }
p3-field = "0.3.0"
p3-fri = "0.3.0"
p3-interpolation = "0.3.0"
p3-keccak = "0.3.0"
p3-matrix = "0.3.0"
p3-merkle-tree = "0.3.0"
p3-poseidon2 = "0.3.0"
p3-blake3 = "0.3.0"
p3-symmetric = "0.3.0"
p3-uni-stark = { version = "0.3.0", features = ["parallel"] }
p3-util = { version = "0.3.0", features = ["parallel"] }

p3-goldilocks-monty = { path = "goldilocks-monty" }
p3-monty-64 = { path = "monty-64" }
