[package]
name = "p3-fib"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-std.workspace = true 
rand.workspace = true


p3-air = { workspace = true }
p3-goldilocks = { workspace = true }
p3-challenger = { workspace = true }
p3-commit = { workspace = true }
p3-dft = { workspace = true }
p3-field = { workspace = true }
p3-fri = { workspace = true }
p3-interpolation = { workspace = true }
p3-keccak = { workspace = true }
p3-matrix = { workspace = true }
p3-merkle-tree = { workspace = true }
p3-poseidon2 = { workspace = true }
p3-blake3 = { workspace = true }
p3-symmetric = { workspace = true }
p3-uni-stark = { workspace = true }
p3-util = { workspace = true }


miden-vm.workspace = true
miden-processor.workspace = true
miden-assembly.workspace = true
miden-prover.workspace = true
miden-verifier.workspace = true
winter-prover.workspace = true

atty.workspace = true
rayon.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

p3-trace-convertor = { path = "../trace-convertor" }