[package]
name = "wf"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wf_demo"
path = "src/main.rs"

[dependencies]
ark-std.workspace = true
rayon.workspace = true
core-utils.workspace = true
tracing.workspace = true
tracing-attributes.workspace = true
tracing-subscriber.workspace = true
atty.workspace = true


miden-crypto = { workspace = true, features = [ "concurrent" ] }
winterfell = { workspace = true, features = [ "concurrent" ] }