[package]
name = "p3-goldilocks-monty"
version = "0.1.0"
edition = "2021"

[dependencies]
p3-monty-64 = { path = "../monty-64" }

p3-field.workspace = true
p3-dft.workspace = true
p3-mds.workspace = true
p3-poseidon2.workspace = true
p3-symmetric.workspace = true

num-bigint.workspace = true
rand.workspace = true
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
p3-goldilocks.workspace = true
p3-field-testing.workspace = true
criterion.workspace = true

[[bench]]
name = "bench_field"
harness = false

[[bench]]
name = "extension"
harness = false

[[bench]]
name = "poseidon_comparison"
harness = false