[package]
name = "p3-trace-convertor"
version = "0.1.0"
edition = "2021"

[dependencies]
# Plonky3 dependencies
p3-matrix.workspace = true
p3-goldilocks.workspace = true
p3-field.workspace = true
p3-util.workspace = true
p3-air.workspace = true

# Miden VM dependencies
miden-processor.workspace = true
miden-core.workspace = true
winter-prover.workspace = true

[dev-dependencies]
# For testing
p3-goldilocks.workspace = true

# For examples - additional Miden dependencies needed for full program execution
miden-core.workspace = true
miden-assembly.workspace = true

# For proof generation examples
p3-uni-stark.workspace = true
p3-fri.workspace = true  
p3-commit.workspace = true
p3-merkle-tree.workspace = true
p3-poseidon2.workspace = true
p3-symmetric.workspace = true
p3-challenger.workspace = true
p3-dft.workspace = true
rand.workspace = true

[features]
default = []
# miden = ["dep:miden-vm", "dep:miden-processor"]

