[package]
name = "wasm-p3-proof-gen"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
p3-air = { workspace = true }
p3-goldilocks = { workspace = true }
p3-challenger = { workspace = true }
p3-commit = { workspace = true }
p3-dft = { workspace = true }
p3-field = { workspace = true }
p3-fri = { workspace = true }
p3-interpolation = { workspace = true }
p3-keccak = { workspace = true }
p3-matrix = { workspace = true }
p3-merkle-tree = { workspace = true }
p3-poseidon2 = { workspace = true }
p3-blake3 = { workspace = true }
p3-symmetric = { workspace = true }
p3-uni-stark = { workspace = true }
p3-util = { workspace = true }

ark-std = { workspace = true }
# rayon= { workspace = true }
# tracing = { workspace = true }
# tracing-attributes= { workspace = true }
# tracing-subscriber = { workspace = true }
# atty = { workspace = true }
# rand = { workspace = true }

wasm-bindgen.workspace = true
js-sys.workspace = true